# xkcd1172

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
docs/: xkcd1172.1
src/xkcd1172/: __init__.py  main.py
