[metadata]
name = xkcd1172
version = 0.1.0
author = Dawid Potocki
author_email = pypi@dawidpotocki.com
description = Rapidly increases CPU temperature when holding down the spacebar
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.dawidpotocki.com/dawid/xkcd1172
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: BSD License
	Operating System :: POSIX
	Environment :: X11 Applications

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.7
install_requires =
	python-xlib>=0.31,<1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	xkcd1172 = xkcd1172:main.main
